# wm-mcp-server

./: .gitignore  .mcp.json  CLAUDE.md  GAP_ANALYSIS.md  README.md
.github/workflows/: ci.yml  (+1 more)
mcp-server/: README.md  is_client.py  server.py
mcp-server-rs/: Cargo.toml  README.md  test_e2e.sh
mcp-server-rs/src/: config.rs  is_client.rs  main.rs  prompts.rs  resources.rs  scopes.rs  server.rs
mcp-server-rs/src/client/: adapters.rs  alerts.rs  auditing.rs  cache.rs  enterprise_gw.rs  flatfile.rs  flow_debug.rs  global_vars.rs  health.rs  ip_access.rs  jar_installer.rs  jdbc_pools.rs  jms.rs  jndi.rs  jwt.rs  ldap.rs  logger.rs  marketplace.rs  mod.rs  monitoring.rs  mqtt.rs  namespace.rs  namespace_deps.rs  oauth.rs  outbound_passwords.rs  packages.rs  packages_ext.rs  password_policy.rs  port_access.rs  ports.rs  proxy.rs  quiesce.rs  remote_servers.rs  saml.rs  scheduler.rs  security.rs  services.rs  sftp.rs  streaming.rs  testing.rs  (+4 more)
mcp-server-rs/src/params/: adapters.rs  auditing.rs  cache.rs  common.rs  enterprise_gw.rs  flatfile.rs  flow_debug.rs  global_vars.rs  health.rs  ip_access.rs  jar_installer.rs  jdbc_pools.rs  jms.rs  jndi.rs  jwt.rs  ldap.rs  logger.rs  marketplace.rs  mod.rs  monitoring.rs  mqtt.rs  namespace.rs  namespace_deps.rs  oauth.rs  outbound_passwords.rs  packages.rs  packages_ext.rs  password_policy.rs  port_access.rs  ports.rs  proxy.rs  quiesce.rs  remote_servers.rs  saml.rs  scheduler.rs  security.rs  services.rs  sftp.rs  streaming.rs  testing.rs  (+4 more)
npm/: .gitignore  .npmignore  README.md  binary.js  install.js  package.json  run.js
